feat: 자소서 자동생성 프로젝트 초기 구현
크롤링 → 회사분석 → AI 자소서 생성 → 리뷰 에이전트 루프 파이프라인 구축
- Jasoseol 크롤링, Claude API 연동 (Sonnet/Haiku 멀티모델)
- 에이전트 리뷰 루프: 초안 → 검토 → 개선 반복 (최대 3회)
- Spring Boot + JPA + MySQL 기반

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.9'
 
+    // Swagger UI (springdoc-openapi)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
     // HTTP Client (Claude/GPT API 호출)
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
